--- a/debian/rules
+++ b/debian/rules
@@ -7,10 +7,13 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
-DEB_PYTHON_SYSTEM=pysupport
+DEB_PYTHON_SYSTEM=pycentral
+#DEB_PYTHON_SYSTEM=pysupport
 
+# Debhelper must be included before python-distutils to use
+# dh_python / dh_pycentral / dh_pysupport
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
