--- a/debian/rules
+++ b/debian/rules
@@ -9,11 +9,14 @@
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
 
-DEB_PYTHON_SYSTEM=pycentral
-#DEB_PYTHON_SYSTEM=pysupport
-
-# Debhelper must be included before python-distutils to use
-# dh_python / dh_pycentral / dh_pysupport
+DEB_PYTHON_SYSTEM=pysupport
+include /usr/share/cdbs/1/rules/buildcore.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
-include /usr/share/cdbs/1/rules/simple-patchsys.mk
+DEB_PYTHON_INSTALL_ARGS_ALL += --single-version-externally-managed --install-layout=deb
+
+#DEB_PYTHON_SYSTEM=pycentral
+#include /usr/share/cdbs/1/rules/debhelper.mk
+#include /usr/share/cdbs/1/class/python-distutils.mk
+#include /usr/share/cdbs/1/rules/simple-patchsys.mk
+
