--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,27 @@
 Source: python-cpl
-Section: science
+Section: python
 Priority: extra
-Maintainer: Ole Streicher <launchpad-cpl@ole.ath.cx>
-Build-Depends: python-dev, debhelper (>= 7), python-support (>= 0.8.4), libcpl-dev (>= 5.1.0)
-Standards-Version: 3.8.4
+Maintainer: Ole Streicher <debian@liska.ath.cx>
+Build-Depends: python-all-dev (>= 2.6.6-3~), debhelper (>= 7),
+ libcpl-dev (>= 5.1.0)
+Standards-Version: 3.9.2
 Homepage: http://www.aip.de/~oles/python-cpl/index.html
 
 Package: python-cpl
 Architecture: any
-Depends: ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}, libcpl (>= 5.1.0)
+Depends: ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}
 Suggests: gdb
 Provides: ${python:Provides}
-XB-Python-Version: ${python:Versions}
-Description: Non-official python module to access CPL recipes. 
-       It is not meant as part of the CPL or the MUSE pipeline software, but
-       may be useful for testing and analysis.
+Description: Control pipeline recipes from the European Southern Observatory
+ This module can list, configure and execute CPL-based recipes from Python.
+ The input, calibration and output data can be specified as FITS files
+ or as pyfits objects in memory.
+ .
+ The Common Pipeline Library (CPL) comprises a set of ISO-C libraries that
+ provide a comprehensive, efficient and robust software toolkit. It forms a
+ basis for the creation of automated astronomical data-reduction tasks.
+ .
+ One of the features provided by the CPL is the ability to create
+ data-reduction algorithms that run as plugins (dynamic libraries). These are
+ called "recipes" and are one of the main aspects of the CPL data-reduction
+ development environment. 
