--- a/debian/rules
+++ b/debian/rules
@@ -4,5 +4,5 @@
 	dh $@ --with python2
 
 override_dh_auto_test:
-	( cd test/iiinstrumentp/ ; ./configure && make ) 
+	( cd test/iiinstrumentp/ ; autoreconf && ./configure && make ) 
 	python test/TestRecipe.py
