--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: python-cpl
 Section: python
 Priority: extra
 Maintainer: Ole Streicher <debian@liska.ath.cx>
-Build-Depends: python-all-dev (>= 2.6.6-3~), debhelper (>= 7),
- libcpl-dev (>= 5.1.0)
+Build-Depends: python-all-dev (>= 2.6.6-3~), debhelper (>= 7.0.50~), 
+ dh-autoreconf, libcpl-dev (>= 5.1.0), python-numpy, python-pyfits
 Standards-Version: 3.9.2
 Homepage: http://www.aip.de/~oles/python-cpl/index.html
 
