--- a/test/iiinstrumentp/.gitignore
+++ b/test/iiinstrumentp/.gitignore
@@ -22,3 +22,10 @@ stamp-h1
 *.la
 .deps
 .libs
+admin
+m4macros/libtool.m4
+m4macros/ltoptions.m4
+m4macros/ltsugar.m4
+m4macros/ltversion.m4
+m4macros/lt~obsolete.m4
+
