--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
     - python setup.py install
     - (cd test/iiinstrumentp && ./bootstrap && ./configure && make CPPFLAGS="$CPPFLAGS -D_XOPEN_SOURCE=500")
 
-script: (cd test && coverage run --source=python-cpl TestRecipe.py)
+script: (cd test && coverage run --source=../cpl TestRecipe.py)
 
 after_success:
   coveralls
