--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ install:
     - python setup.py install
     - (cd test/iiinstrumentp && ./bootstrap && ./configure && make CPPFLAGS="$CPPFLAGS -D_XOPEN_SOURCE=500")
 
-script: (cd test && coverage run --source=../cpl TestRecipe.py)
+script: coverage run --omit test/TestRecipe.py test/TestRecipe.py
 
-after_success:
-  coveralls
+after_success: coveralls
