--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ install:
     - python setup.py install
     - (cd test/iiinstrumentp && ./bootstrap && ./configure && make CPPFLAGS="$CPPFLAGS -D_XOPEN_SOURCE=500")
 
-script: coverage run --omit test/TestRecipe.py test/TestRecipe.py
+script: (cd test && coverage run test/TestRecipe.py && mv -f .coverage ..)
 
 after_success: coveralls
