--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ install:
     - python setup.py install
     - (cd test/iiinstrumentp && ./bootstrap && ./configure && make CPPFLAGS="$CPPFLAGS -D_XOPEN_SOURCE=500")
 
-script: (cd test && coverage run TestRecipe.py && mv -f .coverage ..)
+script: (cd test && coverage run --source=cpl TestRecipe.py && mv -f .coverage ..)
 
 after_success: coveralls
