--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 language: python
+sudo: false 
 
 python:
     - 2.6
     - 2.7
-    - 3.2
     - 3.3
     - 3.4
     - 3.5
 
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libcpl-dev
+addons:
+  apt:
+    packages:
+      libcpl-dev
 
 install:
     - pip install coveralls
