--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: python
-sudo: false 
 
 python:
     - 2.6
@@ -8,10 +7,9 @@ python:
     - 3.4
     - 3.5
 
-addons:
-  apt:
-    packages:
-      libcpl-dev
+before_install:
+    - sudo apt-get update -qq
+    - sudo apt-get install -y libcpl-dev
 
 install:
     - pip install coveralls
