--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+sudo: false 
 
 python:
     - 2.6
@@ -7,9 +8,10 @@ python:
     - 3.4
     - 3.5
 
-before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -y libcpl-dev
+addons:
+  apt:
+    packages:
+      libcpl-dev
 
 install:
     - pip install coveralls
